projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-peering-multi-account/aws_configs/accounts/123456789012/us-east-1/Reservations.json
{
 "Reservations": [
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "AttachTime": "2020-04-28 19:04:02+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-00511e88d3216777f"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0fc61db8544a617ed",
     "InstanceId": "i-07ae69cc808e8804e",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-04-28 19:04:01+00:00",
     "MetadataOptions": {
      "HttpEndpoint": "enabled",
      "HttpPutResponseHopLimit": 1,
      "HttpTokens": "optional",
      "State": "applied"
     },
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Association": {
        "IpOwnerId": "amazon",
        "PublicDnsName": "ec2-52-90-112-181.compute-1.amazonaws.com",
        "PublicIp": "52.90.112.181"
       },
       "Attachment": {
        "AttachTime": "2020-04-28 19:04:01+00:00",
        "AttachmentId": "eni-attach-0dd098cfa8c30c6d7",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "",
       "Groups": [
        {
         "GroupId": "sg-06804d246c3a853bc",
         "GroupName": "bat_sg"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "12:9c:03:9a:a2:3d",
       "NetworkInterfaceId": "eni-0664ca29e3153724d",
       "OwnerId": "028403472736",
       "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
       "PrivateIpAddress": "10.1.1.100",
       "PrivateIpAddresses": [
        {
         "Association": {
          "IpOwnerId": "amazon",
          "PublicDnsName": "ec2-52-90-112-181.compute-1.amazonaws.com",
          "PublicIp": "52.90.112.181"
         },
         "Primary": true,
         "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
         "PrivateIpAddress": "10.1.1.100"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-03a80d08017ee39ef",
       "VpcId": "vpc-0f44fae3468d2b998"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-1a",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
     "PrivateIpAddress": "10.1.1.100",
     "ProductCodes": [],
     "PublicDnsName": "ec2-52-90-112-181.compute-1.amazonaws.com",
     "PublicIpAddress": "52.90.112.181",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-06804d246c3a853bc",
       "GroupName": "bat_sg"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-03a80d08017ee39ef",
     "Tags": [
      {
       "Key": "Name",
       "Value": "bat-web01"
      }
     ],
     "VirtualizationType": "hvm",
     "VpcId": "vpc-0f44fae3468d2b998"
    }
   ],
   "OwnerId": "028403472736",
   "ReservationId": "r-067c33c9a790a00b7"
  }
 ]
}
