projects/batfish/src/test/resources/org/batfish/representation/aws/test-vpc-peering-multi-account/aws_configs/accounts/123456789012/us-east-1/Vpcs.json
{
 "Vpcs": [
  {
   "CidrBlock": "10.1.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-006d602927203f95c",
     "CidrBlock": "10.1.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-3bb56641",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "028403472736",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat"
    }
   ],
   "VpcId": "vpc-0f44fae3468d2b998"
  }
 ]
}
